update command